--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 asgiref==3.8.1
 Django==5.1.7
-django-cors-headers==4.7.0
-dotenv==0.9.9
-PyJWT==2.10.1
-python-dotenv==1.0.1
 sqlparse==0.5.3
+redis==5.0.1
+django-redis==5.4.0
